# level-zero

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PRODUCT_GUID.txt  README.md  azure-pipelines.yml  os_release_info.cmake
bindings/sysman/python/: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
bindings/sysman/python/.github/workflows/: bindings-sysman-python-security-scan.yml
bindings/sysman/python/source/: pyzes.py
bindings/sysman/python/source/cts_tests/: conftest.py  test_power_cts.py
bindings/sysman/python/source/examples/: README.md  __init__.py  pyzes_black_box_test.py  pyzes_example.py
bindings/sysman/python/test/: pyzes_example.py  validate_structures.py
bindings/sysman/python/test/unit_tests/: conftest.py  test_ecc.py  test_engine.py  test_frequency.py  test_global_operations.py  test_init.py  test_memory.py  (+3 more)
samples/zello_world/: CMakeLists.txt  zello_world.cpp
source/: CMakeLists.txt  ZeLoaderVersion.rc.in  level-zero.pc.in  libze_loader.pc.in
source/drivers/: CMakeLists.txt
source/drivers/null/: CMakeLists.txt  ze_null.cpp  ze_null.h  ze_nullddi.cpp  zer_nullddi.cpp  zes_nullddi.cpp  zet_nullddi.cpp
source/inc/: ze_singleton.h  ze_util.h
source/layers/: CMakeLists.txt
source/layers/tracing/: CMakeLists.txt  README.md  ZeTracingLayerVersion.rc.in  tracing.h  tracing_imp.cpp  tracing_imp.h  ze_tracing.cpp  ze_tracing_cb_structs.h  ze_tracing_layer.cpp  ze_tracing_layer.h  ze_tracing_register_cb.cpp  ze_trcddi.cpp  zer_tracing_cb_structs.h  zer_tracing_register_cb.cpp  zer_trcddi.cpp
source/layers/tracing/linux/: tracing_init.cpp
source/layers/tracing/windows/: tracing_init.cpp
source/layers/validation/: CMakeLists.txt  CONTRIBUTING.md  README.md  ZeValidationLayerVersion.rc.in  ze_core_layer.cpp  ze_layer.cpp  ze_layer.h  ze_tools_layer.cpp  ze_valddi.cpp  ze_validation_layer.cpp  ze_validation_layer.h  zer_valddi.cpp  zes_valddi.cpp  zet_valddi.cpp
source/layers/validation/checkers/: CMakeLists.txt  zel_template_checker.cpp  zel_template_checker.h
source/layers/validation/common/: ze_entry_points.h  zer_entry_points.h  zes_entry_points.h  zet_entry_points.h
source/layers/validation/handle_lifetime_tracking/: CMakeLists.txt  handle_lifetime.h  ze_handle_lifetime.cpp  ze_handle_lifetime.h  zer_handle_lifetime.cpp  zer_handle_lifetime.h  zes_handle_lifetime.cpp  zes_handle_lifetime.h  zet_handle_lifetime.cpp  zet_handle_lifetime.h
source/layers/validation/parameter_validation/: extension_validation.inl  param_validation.h  ze_parameter_validation.cpp  ze_parameter_validation.h  zes_parameter_validation.cpp  zes_parameter_validation.h  zet_parameter_validation.cpp  zet_parameter_validation.h
source/lib/: CMakeLists.txt  error_state.cpp  error_state.h  ze_lib.cpp  ze_lib.h  ze_libapi.cpp  ze_libddi.cpp  ze_tracing_register_cb_libapi.cpp  zel_tracing_libapi.cpp  zel_tracing_libddi.cpp  zer_libapi.cpp  zer_libddi.cpp  zer_tracing_register_cb_libapi.cpp  zes_libapi.cpp  zes_libddi.cpp  zet_libapi.cpp  zet_libddi.cpp
source/lib/core/: CMakeLists.txt  ze_barrier.cpp  ze_cl_interop.cpp  ze_cmdlist.cpp  ze_cmdqueue.cpp  ze_copy.cpp  ze_core_lib.cpp  ze_device.cpp  ze_driver.cpp  ze_event.cpp  ze_fence.cpp  ze_image.cpp  ze_lib.cpp  ze_lib.h  ze_memory.cpp  ze_module.cpp  ze_residency.cpp  ze_sampler.cpp
source/lib/linux/: lib_init.cpp
source/lib/tools/: CMakeLists.txt  zet_common.cpp  zet_debug.cpp  zet_driver.cpp  zet_lib.cpp  zet_lib.h  zet_metric.cpp  zet_module.cpp  zet_pin.cpp  zet_sysman.cpp  zet_tools_lib.cpp  zet_tracing.cpp
source/lib/windows/: lib_init.cpp
source/loader/: CMakeLists.txt  driver_discovery.h  ze_core_loader.cpp  ze_core_loader.h  ze_ldrddi.cpp  ze_ldrddi.h  ze_ldrddi_driver_ddi.cpp  ze_ldrddi_legacy.cpp  ze_loader.cpp  ze_loader.h  ze_loader_api.cpp  ze_loader_api.h  ze_loader_internal.h  ze_loader_utils.h  ze_object.h  ze_tools_loader.cpp  ze_tools_loader.h  zel_tracing_ldrddi.cpp  zer_ldrddi.cpp  zer_ldrddi.h  zer_ldrddi_driver_ddi.cpp  zes_ldrddi.cpp  zes_ldrddi.h  zes_ldrddi_driver_ddi.cpp  zes_ldrddi_legacy.cpp  zet_ldrddi.cpp  zet_ldrddi.h  zet_ldrddi_driver_ddi.cpp  zet_ldrddi_legacy.cpp
source/loader/linux/: driver_discovery_lin.cpp  loader_init.cpp
source/loader/windows/: driver_discovery_win.cpp  loader_init.cpp
source/utils/: CMakeLists.txt  logging.cpp  logging.h  ze_logger.cpp  ze_logger.h  ze_to_string.h  zer_to_string.h  zes_to_string.h  zet_to_string.h
source/wrapper/: CMakeLists.txt  ze_wprapi.cpp  zes_wprapi.cpp  zet_wprapi.cpp
source/wrapper/core/: CMakeLists.txt  ze_api.hpp  ze_barrier.cpp  ze_barrier.hpp  ze_cl_interop.cpp  ze_cl_interop.hpp  ze_cmdlist.cpp  ze_cmdlist.hpp  ze_cmdqueue.cpp  ze_cmdqueue.hpp  ze_common.cpp  ze_common.hpp  ze_copy.cpp  ze_copy.hpp  ze_device.cpp  ze_device.hpp  ze_driver.cpp  ze_driver.hpp  ze_event.cpp  ze_event.hpp  ze_fence.cpp  ze_fence.hpp  ze_image.cpp  ze_image.hpp  ze_memory.cpp  ze_memory.hpp  ze_module.cpp  ze_module.hpp  ze_residency.cpp  ze_residency.hpp  ze_sampler.cpp  ze_sampler.hpp
source/wrapper/include/: ze_api.hpp  zes_api.hpp  zet_api.hpp
source/wrapper/tools/: CMakeLists.txt  zet_api.hpp  zet_cmdlist.cpp  zet_cmdlist.hpp  zet_common.cpp  zet_common.hpp  zet_debug.cpp  zet_debug.hpp  zet_device.cpp  zet_device.hpp  zet_driver.cpp  zet_driver.hpp  zet_metric.cpp  zet_metric.hpp  zet_module.cpp  zet_module.hpp  zet_pin.cpp  zet_pin.hpp  zet_sysman.cpp  zet_sysman.hpp  zet_tracing.cpp  zet_tracing.hpp
test/: CMakeLists.txt  README.md  ddi_driver_path_unit_tests.cpp  driver_ordering_helper_tests.cpp  driver_ordering_unit_tests.cpp  driver_teardown_unit_tests.cpp  init_driver_dynamic_unit_tests.cpp  init_driver_unit_tests.cpp  init_driver_unit_tests_common.h  loader_api.cpp  loader_tracing_layer.cpp  loader_validation_layer.cpp  ze_logger_teardown_unit_tests.cpp
test/layers/: CMakeLists.txt
test/layers/validation/: CMakeLists.txt
test/layers/validation/handle_lifetime_tracking/: CMakeLists.txt
test/test_api/: CMakeLists.txt
test/test_api/src/: main.cpp  test_api.cpp
(+167 files in other folders)
